# react-ds-airflow-alanaolivieri-1

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
activities/: exercise1.py  exercise2.py  exercise3.py
